# icmpy

./: README.md  pyproject.toml
scripts/: config.yaml  generate_molsoft_conformers.py
src/icmpy/: ConfGenerator.py  confgen_utils.py
