[project]
name = "icmpy"
version = "0.1.0"
description = "Lightweight python bindings for Molsoft ICM" 
readme = "README.md"
authors = [
    { name = "Philipp Guevorguian", email = "philipp@yerevann.com" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1.2",
    "rdkit>=2024.3.5",
    "tabulate>=0.9.0",
]
